# Omnigrid-mk4-

./: README.md
.github/workflows/: ci.yml  screenshots.yml
ai_agents/: requirements.txt
ai_agents/src/: ghost_coder.py  hal_bridge.py  llm_bridge.py  warden.py
core_dsp/: CMakeLists.txt
core_dsp/src/: engine.cpp  engine.h  queues.cpp
glass_ui/: package-lock.json  package.json
glass_ui/src/hooks/: useHalSocket.ts  useNeonNoir.ts
hal_dmz/: lock_free_queue.h  payloads.h
hardware/: gpio.h
